--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "roox-test-task",
+  "homepage": "https://savinovdanil.github.io/roox-test-task/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +8,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.28.0",
@@ -22,7 +24,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build:dev": "env NODE_ENV=development webpack --config webpack.config.js",
-    "dev": "env NODE_END=development webpack-dev-server"
+    "dev": "env NODE_END=development webpack-dev-server",
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
